dokumentacja/misja_1/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: szk-nginx-service
  namespace: ogloszenia-krytyczne
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: szk-nginx
