dokumentacja/misja_1/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: szk-nginx-ingress
  namespace: ogloszenia-krytyczne
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # Enable SSL redirect if you have cert-manager installed
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: "ogloszenia-krytyczne.193.187.67.100.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: szk-nginx-service
            port:
              number: 80
